RESOLVED FIXED224038
Fix some missing exception checks in HTMLMediaElement methods.
https://bugs.webkit.org/show_bug.cgi?id=224038
Summary Fix some missing exception checks in HTMLMediaElement methods.
Mark Lam
Reported 2021-03-31 20:30:29 PDT
Attachments
proposed patch. (9.83 KB, patch)
2021-03-31 20:34 PDT, Mark Lam
eric.carlson: review+
Mark Lam
Comment 1 2021-03-31 20:34:41 PDT
Created attachment 424870 [details] proposed patch.
Eric Carlson
Comment 2 2021-04-01 07:37:37 PDT
Comment on attachment 424870 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=424870&action=review > Source/WebCore/html/HTMLMediaElement.cpp:7277 > + auto clearExceptionAndReturnFalse = [&] () -> bool { > + scope.clearException(); > + return false; > + }; I think we might as well report the exception unless you know of a reason not to. Failing setup here will change the page behavior, so logging something may help us diagnose user problems.
Mark Lam
Comment 3 2021-04-01 08:36:41 PDT
Thanks for the review. (In reply to Eric Carlson from comment #2) > Comment on attachment 424870 [details] > proposed patch. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=424870&action=review > > > Source/WebCore/html/HTMLMediaElement.cpp:7277 > > + auto clearExceptionAndReturnFalse = [&] () -> bool { > > + scope.clearException(); > > + return false; > > + }; > > I think we might as well report the exception unless you know of a reason > not to. Failing setup here will change the page behavior, so logging > something may help us diagnose user problems. I've applied this change. Landed in r275361: <http://trac.webkit.org/r275361>.
Note You need to log in before you can comment on or make changes to this bug.