Fix some missing exception checks in HTMLMediaElement methods. https://bugs.webkit.org/show_bug.cgi?id=224038 rdar://69573092

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/missing-exception-checks-in-HTMLMediaElement-methods.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setupAndCallJS):
(WebCore::HTMLMediaElement::updateCaptionContainer):
(WebCore::HTMLMediaElement::ensureMediaControlsInjectedScript):
(WebCore::HTMLMediaElement::setControllerJSProperty):
(WebCore::HTMLMediaElement::didAddUserAgentShadowRoot):
(WebCore::HTMLMediaElement::updateMediaControlsAfterPresentationModeChange):
(WebCore::HTMLMediaElement::getCurrentMediaControlsStatus):

LayoutTests:

* media/missing-exception-checks-in-HTMLMediaElement-methods-expected.txt: Added.
* media/missing-exception-checks-in-HTMLMediaElement-methods.html: Added.



Canonical link: https://commits.webkit.org/236032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275361 268f45cc-cd09-0410-ab3c-d52691b4dbfc